# Vikshep

./: .gitignore  LICENSING.md  README.md  package.json
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml
agent/: package.json  tsconfig.json
agent/src/: main.ts
agent/src/coordinator/: Coordinator.ts  MessageBus.ts  SubAgent.ts
agent/src/mcp/: McpClient.ts  schemas.ts
agent/src/memory/: DaemonConsolidator.ts  MemoryStore.ts
agent/src/recipes/: bsmAnomaly.ts  generalFeature.ts  hepTaggingDisco.ts  index.ts
agent/src/tools/: AnomalyTool.ts  ClassifierInferenceTool.ts  ExecuteWSTTool.ts
agent/tests/: schema_validation.test.ts
backend/: Cargo.toml
backend/ingest/: pyproject.toml
backend/ingest/src/vikshep_ingest/: registry.py  serve.py
backend/ingest/src/vikshep_ingest/loaders/: base.py  hdf5_loader.py  root_uproot.py
backend/src/: main.rs
contract/: mcpSchemas.ts  objectId.ts  wsPreview.ts
open-source-wst/: README.md  pyproject.toml
scripts/: check-boundaries.sh
site/: THEME_TOKENS.md  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/math/: page.tsx
site/components/: ArchitectureDiagram.tsx  CodeBlock.tsx  FeedbackButton.tsx  FeedbackModal.tsx  Footer.tsx  HeroScalogram.tsx  MathAccordion.tsx  MathBlock.tsx  ModuleStackBadges.tsx  Nav.tsx  ProblemSection.tsx  RecipeCard.tsx  RecipeLayout.tsx  SiteShell.tsx  UseCaseCard.tsx
site/content/: math-references.bib
site/lib/: lookup-tables.ts  synthetic.ts
web/: package.json  vite.config.js
web/src/: App.jsx  PipelineVisualizer.jsx  ScatteringVisualizer.jsx
(+16 files in other folders)
